# klipper-cnc-assistant

./: .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  pyproject.toml
deploy/: install_service.sh  klipper-cnc-assistant.env  uninstall_service.sh
deploy/systemd/: klipper-cnc-assistant.service
docs/: architecture.md  deployment.md  frontend.md  multioperation-job-orchestrator.md  physical-validation.md  remote-access.md
experiments/001_moonraker_connection/: README.md  test_connection.py
experiments/002_websocket_position/: README.md  test_websocket.py
experiments/003_basic_motion/: README.md  test_motion.py
experiments/004_continuous_jog/: README.md  jog_benchmark.py
experiments/005_keyboard_input/: README.md  keyboard_control.py
experiments/006_motion_horizon/: README.md  hybrid_horizon.py  motion_horizon_controller.py  predictive_horizon.py  state_estimator.py  submitted_horizon.py  submitted_trajectory.py  test_hybrid_horizon.py  test_live_telemetry.py  test_motion_horizon.py  test_naive_renewal.py  test_planned_horizon.py  test_predictive_horizon.py  test_raw_motion_report.py  test_raw_trapq.py  test_real_horizon_controller.py  test_submitted_trajectory.py  test_trapq_clock.py  test_trapq_horizon.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tests/: README.md  manual_control_test.py  manual_jog_test.py  test_api.py  test_gcode_analysis.py  test_heightmap.py  test_job_service.py  test_machine_runtime.py  test_physical_integration.py  test_project_service.py  test_web_mvp.py
(+115 files in other folders)
